<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_transaction">

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.ikp.transcribe.ui.transaction.TransactionFragment"
        android:label="@string/transaction_menu_title"
        tools:layout="@layout/fragment_transaction" />
    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.ikp.transcribe.ui.chart.ChartFragment"
        android:label="@string/chart_menu_title"
        tools:layout="@layout/fragment_chart" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.ikp.transcribe.ui.setting.SettingFragment"
        android:label="@string/setting_menu_title"
        tools:layout="@layout/fragment_setting" />
    <navigation android:id="@+id/navigation_scan"
        app:startDestination="@id/navigation_scan_camera">
        <fragment
            android:id="@+id/scanConfirmationFragment"
            android:name="com.ikp.transcribe.ui.scan.ScanConfirmationFragment"
            android:label="Konfirmasi Gambar"
            tools:layout="@layout/fragment_scan_confirmation">
            <action
                android:id="@+id/action_scanConfirmationFragment_to_navigation_transaction"
                app:destination="@id/navigation_transaction"
                app:popUpTo="@id/navigation_scan_camera"
                app:popUpToInclusive="true" />
        </fragment>
        <fragment
            android:id="@+id/navigation_scan_camera"
            android:name="com.ikp.transcribe.ui.scan.ScanFragment"
            android:label="@string/scan_menu_title"
            tools:layout="@layout/fragment_scan">
            <action
                android:id="@+id/action_navigation_scan_to_scanConfirmationFragment"
                app:destination="@id/scanConfirmationFragment" />
        </fragment>
    </navigation>
</navigation>